--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,16 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+
+.country-list {
+  list-style: none;
+}
+
+.country-list_item {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+
+  font-size: 25px;
+  font-weight: 700;
+}
